client/css/app.css
/* Move down content because we have a fixed navbar that is 50px tall */
body {
    padding-top: 50px;
    background-color: #dddddd;

    /*background: url('img/basketball.png') center center;*/
    /*background-size: 200px;*/
}

/* Make the navbar link in the header ("Play Now") appear the same as the "Rules" navbar-brand element. This is easier than
   trying to have 2 (or more) different navbar-brand elements, while retaining the active-tab highlighting that nav links have. */
.navbar-header .navbar-nav {
    margin-top: 0;
    padding-left: inherit;
}
.navbar-header .navbar-nav a {
    float: left;
    padding: 15px;
    font-size: 18px;
    text-decoration: none;
}
/** On mobile screens, don't pin the header to the top — it wastes valuable screen space. */
@media (max-width: 980px) {
  .navbar-fixed-top {
      position: static;
  }
  body {
      padding-top: 0;
  }
}

/** Don't display the tourney countdown timer in the header on small screens, cause it messes up the layout. */
@media (max-width: 980px) {
  .navbar-header .tourney-countdown {
      display:none;
  }
}

.accountManagement input {
    width: 15em;
}


.editPool fieldset {
    width: 600px;
}
.editPool label {
    text-align: left;
}

.poolJumpTo {
    margin-top: 15px;
    margin-bottom: 15px;
    font-size: 15px;
}
.poolJumpTo .jump-to-label {
    font-weight: bold;
    margin-right: 14px;
}
.poolJumpTo .sep {
    color: #999;
    margin: 0 7px;
}
.poolJumpTo a {
    text-decoration: none;
}
.poolJumpTo a:hover {
    text-decoration: underline;
}
.font-bold {
    font-weight: bold;
}

.poolsList .allBracketsGrid {
    margin-left: 20px;
    max-width: 600px;
}

/* styles for the ng-grid directive on the create/edit bracket page */
.selectTeamsGrid {
    border: 1px solid rgb(212,212,212);
    height: 400px;
    width: 550px;
}
/* prevents a horizontal scroll bar from appearing, even when it's not needed */
.selectTeamsGrid .ngViewport {
    overflow-x: hidden;
}

/* styles for the view-bracket module */
.viewBracket h3 {
    /* this allows the .bracketOwner to follow on the same line */
    display: inline-block;
}
.viewBracket .bracketOwner,
.viewBracket .bracketCeiling {
    margin-left: 15px;
}
.bracketTable {
    border: 1px solid rgb(212,212,212);
    height: 409px;
}
.bracketTable thead {
    background-color: #eaeaea;
    border-bottom: 1px solid #d4d4d4;
}
.bracketTable th {
    height: 50px;
    line-height: 50px;
    vertical-align: top;
    cursor: pointer;  /* indicates to the user that the column header is clickable, to sort the column */
}
#bootstrap-overrides .bracketTable th {
    vertical-align: top;
}
.bracketTable th small {
    font-weight: normal;
}
/* picks column (school name) */
.bracketTable th:nth-child(1) {
    width: 150px;
    min-width: 130px;
}
/* seed column */
.bracketTable th:nth-child(2) {
    min-width: 45px;
    max-width: 60px;
}
/* team total column (use class instead of fragile nth-child) */
.bracketTable .team-total {
    min-width: 85px;
    max-width: 100px;
}
.eliminated,
.eliminated a {
    color: darkgray;
}
.current-user-bracket {
    font-weight: bold;
}
.bracketTable .eliminated td:nth-child(1),
.bracketTable .eliminated td:nth-child(2) {
    text-decoration: line-through;
}
/* make the striping on every other row a lighter shade of gray */
.bracketTable tr:nth-of-type(even) {
    background-color: #f3f3f3;
}
#bootstrap-overrides tbody td {
    /* even MORE condensed than the .table-condensed bootstrap class gives (5px) */
    padding-top: 2px;
    padding-bottom: 2px;
}
.bracketTable td {
    /* all of the numbers in the table should be right-aligned */
    text-align: right;
    height: 25px;
    line-height: 25px;
}
/* only the first column (with the team name) should be left-aligned */
.bracketTable tbody td:nth-child(1) {
    text-align: left;
}
.bracketTable tfoot {
    font-weight: bold;
    height: 30px;
    line-height: 30px;
    background-color: #eaeaea;
}
.bracketTable tfoot td:nth-child(1) {
    text-align: center;
}

.currentUserBracket {
    margin-top: 10px;
}

.allBracketsGrid {
    border: 1px solid rgb(212,212,212);
    margin-top: 20px;
}
.allBracketsGrid .ngCell {
    text-align: right;
}
.allBracketsGrid .col0 {
    text-align: left;
}
/* prevents a horizontal scroll bar from appearing, even when it's not needed */
.allBracketsGrid .ngViewport {
    overflow: hidden;
}


.menu {
  list-style: none;
  border-bottom: 0.1em solid black;
  margin-bottom: 2em;
  padding: 0 0 0.5em;
}

.menu > li {
  display: inline;
}

.menu > li.hide {
   display: none;
}

.menu > li:before {
  content: "|";
  padding-right: 0.3em;
}

.menu > li:nth-child(1):before {
  content: "";
  padding: 0;
}

form label {
   display: block;
}

form label span {
   display: block;
   font-weight: bold;
}

.error {
   color: red;
}

fieldset {
   float: left;
   margin-right: 25px;
   padding: 25px;
}

/* Ceiling color classes for the team-picking page */
.ceiling-color-great { color: #2e7d32; font-weight: bold; }
.ceiling-color-good { color: #558b2f; }
.ceiling-color-fair { color: #f57f17; }
.ceiling-color-low { color: #c62828; }

/* Collision warnings on create/edit bracket page */
.collision-warnings { margin-top: 5px; }
.collision-warning { margin-bottom: 2px; font-size: 13px; }
.collision-warning .glyphicon { margin-right: 4px; }
.collision-r1 { color: #c62828; }
.collision-r2 { color: #f57f17; }

/* Smart-Table styles */
.st-sort-ascent:before {
    content: '\25B2  '; /* up arrow */
    font-size: 11px;
    color: #337ab7;
}
.st-sort-descent:before {
    content: '\25BC  '; /* down array */
    font-size: 11px;
    color: #337ab7;
}

